# metamaterials_ai

./: .gitignore  README.md  pyproject.toml  run.sh
configs/: ann.cfg  cnn.cfg  mlpmixer.cfg  res-ann.cfg  resnet1d.cfg
docs/: NN.xml
src/: argparser.py  config.py  data.py  data_module.py  file_utils.py  forward_model.py  main.py  meta_trainer.py  meta_trainer_facotry.py  meta_trainer_factory.py  mixer.py  mixer_module.py  nngraph.py  old_main.py  plotter.py  predictor.py  trainer.py  trainer_factory.py  utils.py  walkthrough.ipynb
src/configs/: ann.cfg
src/data_modules/: __init__.py  data.py  data_module.py  forward_data_module.py
src/dto/: data.py
src/models/: __init__.py  backward_model.py  backwards.py  base_model.py  direct_model.py  forward_model.py  forwards.py  inverse_model.py  model.py  model_arch_factory.py  model_config.py  model_factory.py
src/models/ANN/: __init__.py  model_maker.py
src/models/CNN/: model_maker.py
src/models/VAE/: model_maker.py
src/models/ann/: ann_module.py  model_maker.py
src/models/cnn/: model_maker.py  module.py
src/models/mlp_mixer/: __init__.py  arch.py  mixer_module.py
src/models/mlpmixer/: mixer_module.py
src/notebooks/: data_exploring.ipynb  eda.ipynb  forward_utils.py  inconel_preds.tsv  metrics.ipynb  predictor.ipynb  results.ipynb  sample_input.csv  simple-nn.ipynb  ss_predictions.tsv  to_minok.ipynb  to_minok_inconel.csv  to_minok_inconel.tsv  to_minok_inconel_params.tsv
src/raw2pt/: raw2pt.py
src/utils/: __init__.py  data_utils.py  file_utils.py  training_utils.py  utils.py
(+9 files in other folders)
