[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["pmotameni <47757728+pmotameni@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = "^1.8.0"
pandas = "^1.4.2"
scikit-learn = "^1.1.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
pydantic = "^1.9.1"
wandb = "^0.12.17"
pytorch-lightning = "^1.6.3"
einops = "^0.4.1"
gdown = "^4.4.0"
timm = "^0.5.4"
ipywidgets = "^7.7.1"
onnx = "^1.12.0"
torchinfo = "^1.7.0"
altair = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
ipykernel = "^6.13.0"
black = "^22.3.0"
isort = "^5.10.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
